--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Boilerplate App",
+  "name": "boilerplate-app",
   "version": "0.1.0",
   "description": "",
   "main": "main.js",
@@ -8,7 +8,10 @@
     "test": "webpack-dev-server --content-base build/ --colors --progress",
     "start": "npm run build && npm run test"
   },
-  "keywords": ["react","boilerplate"],
+  "keywords": [
+    "react",
+    "boilerplate"
+  ],
   "author": "Elihu A. Cruz Albores",
   "license": "MIT",
   "devDependencies": {
@@ -16,6 +19,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.22.0",
     "cross-env": "^3.1.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
@@ -23,10 +27,13 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "mathjs": "^3.10.0",
     "firebase": "^3.6.4",
+    "material-ui": "^0.17.0",
+    "mathjs": "^3.10.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-tap-event-plugin": "^2.0.1",
+    "recharts": "^0.21.2"
   }
 }
